Java9 compatibility improvements and bug fixes (known java9 issues: isolatedFS and javafx are broken)